# hack2skill

content_forge/: design.md  pyproject.toml  requirements.md  requirements.txt  tasks.md
content_forge/backend/src/content_forge/: __init__.py
content_forge/backend/src/content_forge/api/: __init__.py
content_forge/backend/src/content_forge/models/: __init__.py  common.py  dashboard.py  project.py  retention.py  script.py  trends.py  user.py  video.py
content_forge/backend/src/content_forge/services/: __init__.py  project_service.py
content_forge/backend/src/content_forge/utils/: __init__.py  auth.py  bedrock.py  dynamodb.py  s3.py
